Промежуточный результат 73 успешных теста